# trading-agent

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  GETTING_STARTED.md  README.md  config.crypto.example.yaml  config.example.yaml  config.robinhood.example.yaml  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh
.github/workflows/: ci.yml
scripts/: compare_strategies.py
src/trading_agent/: __init__.py  cli.py  config.py
src/trading_agent/brokers/: __init__.py  alpaca.py  base.py  paper.py  robinhood.py  robinhood_mcp.py  robinhood_oauth.py
src/trading_agent/core/: __init__.py  backtest.py  data.py  engine.py  models.py  risk.py  schedule.py  universe.py
src/trading_agent/signals/: __init__.py  fundamentals.py  live.py  news.py
src/trading_agent/strategies/: __init__.py  base.py  blended.py  indicators.py  momentum.py  rsi_reversion.py  scorecard.py  sma_crossover.py
tests/: test_backtest.py  test_brokers_gating.py  test_crypto.py  test_engine_logging.py  test_entry_recovery.py  test_event_driven.py  test_fundamentals.py  test_gross_exposure.py  test_live_news.py  test_loop_resilience.py  test_mcp_automap.py  test_news.py  test_oauth_storage.py  test_paper_broker.py  test_portfolio_backtest.py  test_risk.py  test_schedule.py  test_scorecard.py  test_take_profit_and_tiers.py  test_universe_ranking.py
