[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-agent"
version = "0.1.0"
description = "A modular, risk-first trading agent with backtesting and pluggable brokers/strategies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
yfinance = ["yfinance>=0.2"]
robinhood = ["robin_stocks>=3.0"]
config = ["pyyaml>=6.0"]
dev = ["pytest>=7.0"]

[project.scripts]
trading-agent = "trading_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
