[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-agent"
version = "0.1.0"
description = "A modular, risk-first trading agent with backtesting and pluggable brokers/strategies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
yfinance = ["yfinance>=0.2"]
alpaca = ["alpaca-py>=0.20"]
robinhood = ["mcp>=1.28"]               # official Robinhood MCP + built-in OAuth client
robinhood-legacy = ["robin_stocks>=3.0"]  # unofficial, ToS-violating (discouraged)
config = ["pyyaml>=6.0"]
dev = ["pytest>=7.0"]

[project.scripts]
trading-agent = "trading_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
